--- a/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.CommonService/Senparc.Weixin.MP.Sample.CommonService.csproj
+++ b/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.CommonService/Senparc.Weixin.MP.Sample.CommonService.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
