--- a/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.MySQL/Senparc.Weixin.MP.Sample.MySQL.csproj
+++ b/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.MySQL/Senparc.Weixin.MP.Sample.MySQL.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
