--- a/src/Senparc.Weixin/Senparc.Weixin/Senparc.Weixin.csproj
+++ b/src/Senparc.Weixin/Senparc.Weixin/Senparc.Weixin.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
