--- a/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.CommonService/Senparc.Weixin.MP.Sample.CommonService.csproj
+++ b/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.CommonService/Senparc.Weixin.MP.Sample.CommonService.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
