--- a/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.CommonService/Senparc.Weixin.MP.Sample.CommonService.csproj
+++ b/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.CommonService/Senparc.Weixin.MP.Sample.CommonService.csproj
@@ -6,16 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="MessageHandlers\CustomMessageHandler\CustomMessageHandler_Events.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.0" />
     <PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Senparc.Weixin.MP\Senparc.Weixin.MP\Senparc.Weixin.MP.csproj" />
+    <ProjectReference Include="..\Senparc.Weixin.MP.Sample.MySQL\Senparc.Weixin.MP.Sample.MySQL.csproj" />
   </ItemGroup>
 
 </Project>
