增加微信配置

--- a/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.csproj
+++ b/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputType>exe</OutputType>
+  </PropertyGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
@@ -7,7 +11,14 @@
   <PropertyGroup>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <OutputTypeEx>exe</OutputTypeEx>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Remove="Properties\PublishProfiles\SenparcSDKMysql - FTP.pubxml" />
+    <None Remove="Properties\PublishProfiles\SenparcSDKMysql - Web Deploy.pubxml" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="microsoft.aspnetcore" Version="1.1.0" />
@@ -25,6 +36,10 @@
     <ProjectReference Include="..\..\Senparc.Weixin\Senparc.Weixin\Senparc.Weixin.csproj" />
     <ProjectReference Include="..\Senparc.Weixin.MP.Sample.CommonService\Senparc.Weixin.MP.Sample.CommonService.csproj" />
     <ProjectReference Include="..\Senparc.Weixin.MP.Sample.MySQL\Senparc.Weixin.MP.Sample.MySQL.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 </Project>
